2023-01-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCbtree.cc:
	  Fix bug #3505.
	* src/ds390/gen.c,
	  src/mcs51/gen.c,
	  src/z80/gen.c:
	  Type fixes for code generation (fixing regressions visible on 32-bit big-endian hosts), partial fix for bug #3539.

2023-01-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/mos6502/main.c:
	  stdlib selection, patch #454 by Basil Hussain.
	* debugger/mcs51/cmd.c:
	  Avoid debugger segfault, patch #449 by Mark Symonds.
	* doc/sdccman.lyx:
	  Enhance documentation for __sdcc_external_startup, patch #456 by Basil Hussain.
	* src/SDCC.y:
	  Remove null-pointer checks on something that is not a pointer in current SDCC, patch #442 by Reini Urban.
	* src/pdk/main.c,
	  .version:
	  __sdcc_external_startup return checking for pdk, patch #455 by Basil Hussain.
	* src/mos6502/peeph.def:
	  mos6502 peephole rule fix, patch #453 by Michel Iwaniec.
	* src/stm8/gen.c
	  Type fix for code generation (fixing regressions visible on 32-bit big-endian hosts), partial fix for bug #3539.
	* src/z80/gen.c,
	  support/regression/tests/bug-3532.c:
	  Fix bug #3532.
	* src/SDCCbtree.cc,
	  support/regression/tests/bug-3523.c,
	  support/regression/tests/bug-3487.c:
	  Fix bugs #3523, #3487.

2023-01-19 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/*/crt0.s,
	  src/SDCCglue.c,
	  src/stm8/main.c,
	  .version:
	  Patch #453 by Basil Hussain to further harmonize __sdcc_external_startup (RFE #859).
	* src/z80/gen.c,
	  src/ds390/gen.c,
	  src/mcs51/gen.c:
	  Type fixes for code generation (fixing regressions visible on 32-bit big-endian hosts), partial fix for bug #3539.
	* doc/sdccman.lyx:
	  Improve __sdcc_external_startup documentation.

2023-01-17 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-va-arg-5.c:
	  Disable Test for GCC up to 11, since it still fails on x86 hosts for that version.
	* support/regression/cases/Makefile.in: