@@ -1,7 +1,7 @@
 /*---------------------------------------------------------------------
    strtol() - convert a string to a long int and return it
 
-   Copyright (C) 2018, Philipp Klaus Krause . krauseph@informatik.uni-freiburg.de
+   Copyright (C) 2018-2023, Philipp Klaus Krause . krauseph@informatik.uni-freiburg.de
 
    This library is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
